Refactored for SpoutAPI port.
-- Added BackpackConfiguration holder class
-- Added BackpackHandler for Spout to handle backpacks

Signed-off-by: Chris Sanders <NinjaZidane@hotmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,12 @@
             <version>3.2.1</version>
             <scope>provided</scope>
         </dependency>
+		<dependency>
+			<groupId>org.spout</groupId>
+			<artifactId>spoutapi</artifactId>
+			<version>dev-SNAPSHOT</version>
+			<scope>provided</scope>
+		</dependency>
     </dependencies>
 
     <build>
