[Bukkit] <- Likes its camel case.
Signed-off-by: Chris Sanders <NinjaZidane@hotmail.com>

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -6,5 +6,5 @@ author: Zidane
 authors: [Zidane, Dockter]
 
 main: com.almuramc.backpack.bukkit.BackpackPlugin
-softdepend: [spout]
+softdepend: [Spout]
 load: POSTWORLD
