--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -40,6 +40,7 @@ admin:
   control-panel: false
   hotkey: KEY_V
 backpack:
+  no-perm-size-default: 9
   hotkey: KEY_B
 storage:
   host: localhost
