[Bukkit]Added Workbench. Started to Add Admin Panel. Now with 50% less rage. Signed-off-by: mcsnetworks <mike@mcsnetworks.com>

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -42,6 +42,8 @@ admin:
 backpack:
   no-perm-default-size: 9
   hotkey: KEY_B
+workbench:  
+  hotkey: KEY_N
 storage:
   host: localhost
   port: 3306
