[Common] Backpack 1.0 release. Signed-off-by: Chris Sanders <NinjaZidane@hotmail.com>

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: Backpack
-version: 1.0-SNAPSHOT
+version: 1.0
 description: Backpack is a plugin for Spout that gives users a handy backpack for inventory.
 
 author: Zidane
