--- a/pom.xml
+++ b/pom.xml
@@ -138,13 +138,13 @@
 					<properties>
 						<name>${project.name}</name>
 						<url>${project.organization.url}</url>
-						<license>GNU Public License version 3</license>
-						<licenseUrl>http://www.gnu.org/licenses/gpl.txt</licenseUrl>
+						<license>Almura Development License version 1</license>
+						<licenseUrl>http://www.almuramc.com</licenseUrl>
 						<copyright>Copyright (c) 2012, AlmuraDev</copyright>
 					</properties>
 					<includes>
 						<include>src/main/java/**</include>
-						<include>src/test/java/**</include>
+						<include>src/main/test/**</include>
 					</includes>
 				</configuration>
 			</plugin>
