--- a/pom.xml
+++ b/pom.xml
@@ -24,8 +24,8 @@
     <!-- License -->
     <licenses>
         <license>
-            <name>GNU LESSER GENERAL PUBLIC LICENSE Version 3</name>
-            <url>http://www.gnu.org/licenses/lgpl.html</url>
+            <name>GNU GENERAL PUBLIC LICENSE Version 3</name>
+            <url>http://www.gnu.org/licenses/gpl.html</url>
             <distribution>repo</distribution>
         </license>
     </licenses>
@@ -33,23 +33,13 @@
     <!-- Repository locations -->
     <repositories>
         <repository>
-            <id>bukkit-repo</id>
-            <url>http://repo.bukkit.org</url>
-        </repository>
-        <repository>
             <id>spout-repo</id>
             <url>http://repo.spout.org</url>
         </repository>
 		<repository>
-			<id>nexus</id>
-			<name>nesus.alta189</name>
+			<id>alta189-repo</id>
 			<url>http://repo.alta189.com</url>
-			<snapshots>
-				<enabled>true</enabled>
-				<updatePolicy>always</updatePolicy>
-			</snapshots>
 		</repository>
-
 	</repositories>
 
     <!-- Dependencies -->
@@ -70,6 +60,7 @@
             <groupId>net.milkbowl</groupId>
             <artifactId>vault</artifactId>
             <version>1.2.12</version>
+			<scope>provided</scope>
         </dependency>
 		<dependency>
 			<groupId>org.spout</groupId>
