Fixed a mountain's worth of issues.
[Common] Cleanup pom.xml
[Bukkit] Vault is now a dependency so permission issues should be fixed.
[Bukkit] Fixed issue with backpack command not opening backpack.
[Bukkit] Re-wrote Storage core to be more efficient with 200+ players,
lowered I/O per player to only once an inventory open.
[Bukkit] Added initial backpack blacklist system (available via
blacklist.yml). The next commit will make it more human-friendly but right
now you simply add material names (any number you want) to blacklist. A
player is also alerted to the fact it is blacklisted. The permission
backpack.noblacklist turns this off (off by default).
[Bukkit] Fixed dynamic scaling of backpacks failing.
[Bukkit] Added Dynamic worlds support to Storage core. Adding worlds in
the session now automatically injects them ready for use.
[Bukkit] Added reload command (/backpack reload). Available from the
console as well.
[Spout] Spout needed no update because it is at a level of awesome I only
hope to achieve once in my meager existence.

Signed-off-by: Chris Sanders <NinjaZidane@hotmail.com>

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,7 +5,8 @@ author: ${project.organization.name}
 website: ${project.organization.url}
 
 main: com.almuramc.backpack.bukkit.BackpackPlugin
-softdepend: [Spout, Vault]
+depend: [Vault]
+softdepend: [Spout]
 load: POSTWORLD
 
 commands:
@@ -28,3 +29,6 @@ permissions:
     backpack.workbench:
         description: Allows users to use workbench if it exists in the users backpack or inventory.
         default: op
+    backpack.noblacklist:
+        description: Allows users to bypass items listed in blacklist.yml
+        default: false
