--- a/pom.xml
+++ b/pom.xml
@@ -1,67 +1,68 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-    <!-- Project information -->
-    <groupId>com.almuramc</groupId>
-    <artifactId>backpack</artifactId>
-    <version>dev-SNAPSHOT</version>
-    <name>Backpack</name>
-    <url>http://www.almuramc.com</url>
-    <description>Backpack is a plugin for Bukkit/Spout that gives users a handy backpack.</description>
+	<!-- Project information -->
+	<groupId>com.almuramc</groupId>
+	<artifactId>backpack</artifactId>
+	<version>dev-SNAPSHOT</version>
+	<name>Backpack</name>
+	<url>http://www.almuramc.com</url>
+	<description>Backpack is a plugin for Bukkit/Spout that gives users a handy backpack.</description>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <bukkitVersion>1.2.5-R4.0</bukkitVersion>
-        <buildNumber>Unknown</buildNumber>
-    </properties>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<bukkitVersion>1.2.5-R4.0</bukkitVersion>
+		<buildNumber>Unknown</buildNumber>
+	</properties>
 
-    <!-- Organization -->
-    <organization>
-        <name>AlmuraDev</name>
-        <url>http://www.almuramc.com</url>
-    </organization>
+	<!-- Organization -->
+	<organization>
+		<name>AlmuraDev</name>
+		<url>http://www.almuramc.com</url>
+	</organization>
 
-    <!-- License -->
-    <licenses>
-        <license>
-            <name>GNU GENERAL PUBLIC LICENSE Version 3</name>
-            <url>http://www.gnu.org/licenses/gpl.html</url>
-            <distribution>repo</distribution>
-        </license>
-    </licenses>
+	<!-- License -->
+	<licenses>
+		<license>
+			<name>GNU GENERAL PUBLIC LICENSE Version 3</name>
+			<url>http://www.gnu.org/licenses/gpl.html</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
 
-    <!-- Repository locations -->
-    <repositories>
-        <repository>
-            <id>spout-repo</id>
-            <url>http://repo.spout.org</url>
-        </repository>
+	<!-- Repository locations -->
+	<repositories>
+		<repository>
+			<id>spout-repo</id>
+			<url>http://repo.spout.org</url>
+		</repository>
 		<repository>
 			<id>alta189-repo</id>
 			<url>http://repo.alta189.com</url>
 		</repository>
 	</repositories>
 
-    <!-- Dependencies -->
-    <dependencies>
-        <dependency>
-            <groupId>org.bukkit</groupId>
-            <artifactId>bukkit</artifactId>
-            <version>${bukkitVersion}</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.getspout</groupId>
-            <artifactId>spoutpluginapi</artifactId>
-            <version>dev-SNAPSHOT</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>net.milkbowl</groupId>
-            <artifactId>vault</artifactId>
-            <version>1.2.12</version>
-            <scope>provided</scope>
-        </dependency>
+	<!-- Dependencies -->
+	<dependencies>
+		<dependency>
+			<groupId>org.bukkit</groupId>
+			<artifactId>bukkit</artifactId>
+			<version>${bukkitVersion}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.getspout</groupId>
+			<artifactId>spoutpluginapi</artifactId>
+			<version>dev-SNAPSHOT</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>net.milkbowl</groupId>
+			<artifactId>vault</artifactId>
+			<version>1.2.12</version>
+			<scope>provided</scope>
+		</dependency>
 		<dependency>
 			<groupId>org.spout</groupId>
 			<artifactId>spoutapi</artifactId>
@@ -74,33 +75,33 @@
 			<version>1.1.0-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
-    </dependencies>
+	</dependencies>
 
-    <build>
-        <defaultGoal>clean install</defaultGoal>
-        <!-- Resources -->
-        <resources>
-            <resource>
-                <targetPath>.</targetPath>
-                <filtering>true</filtering>
-                <directory>${basedir}/src/main/resources</directory>
-                <includes>
-                    <include>*.yml</include>
-                </includes>
-            </resource>
-        </resources>
-        <!-- Plugins -->
-        <plugins>
-            <!-- Compile plugin -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
-                <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
-                </configuration>
-            </plugin>
+	<build>
+		<defaultGoal>clean install</defaultGoal>
+		<!-- Resources -->
+		<resources>
+			<resource>
+				<targetPath>.</targetPath>
+				<filtering>true</filtering>
+				<directory>${basedir}/src/main/resources</directory>
+				<includes>
+					<include>*.yml</include>
+				</includes>
+			</resource>
+		</resources>
+		<!-- Plugins -->
+		<plugins>
+			<!-- Compile plugin -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.3.2</version>
+				<configuration>
+					<source>1.6</source>
+					<target>1.6</target>
+				</configuration>
+			</plugin>
 			<!-- License header formatting plugin -->
 			<plugin>
 				<groupId>com.mycila.maven-license-plugin</groupId>
@@ -138,6 +139,6 @@
 					</includes>
 				</configuration>
 			</plugin>
-        </plugins>
-    </build>
+		</plugins>
+	</build>
 </project>
