[Bukkit] Many many fixes and additions!
- Fixed NPE when saving due to files not being written
- Fixed NPE when loading because backpack section wasn't in the
  backpack.yml (reverted v2 change I made).
- Fixed inner wrapped inventory object becoming the wrapper itself. There
  is now safeguards against this.
- Fixed blacklister NPE'ing and added notification to the user when items
  will be dropped.
- Fixed upgrading command throwing NPEs, added in notification system to
  let users know what they have upgraded too.
- Improved storage core to be as efficient as possible. Objects are only
  held so long as a player is online and are discarded on session
  disconnect. Trimmed the fat of the core as well, its down to little
  amount of code.
- Added max-no-perm-size to config to handle maximum sizes, renamed
  default-no-perm-size to just default-size
- Removed remaining workbench code.
-
Signed-off-by: Chris Sanders <NinjaZidane@hotmail.com>

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -34,13 +34,14 @@
 #
 general:
   use-economy: false
-  use-spout: false
+  use-spout: true
   use-sql: false
 admin:
   control-panel: false
   hotkey: KEY_V
 backpack:
-  no-perm-default-size: 9
+  default-size: 9
+  maximum-no-perm-size: 54
   hotkey: KEY_B
   cost:
     slot18: 0
