--- a/pom.xml
+++ b/pom.xml
@@ -1,18 +1,17 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<!-- Project information -->
 	<groupId>com.almuramc</groupId>
 	<artifactId>backpack</artifactId>
-	<version>dev-SNAPSHOT</version>
+	<version>b100</version>
 	<name>Backpack</name>
 	<url>http://www.almuramc.com</url>
 	<description>Backpack is a plugin for Bukkit/Spout that gives users a handy backpack.</description>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<bukkitVersion>1.2.5-R4.0</bukkitVersion>
+		<bukkitVersion>1.3.1-R1.0</bukkitVersion>
 		<buildNumber>Unknown</buildNumber>
 	</properties>
 
