--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -20,7 +20,7 @@ permissions:
     backpack.use:
         description: Allows users to access backpack.
         default: false
-    backpack.overflow
+    backpack.overflow:
         description: Allows users which full inventories to have the pickup'd item go straight to the backpack.
         default: false
     backpack.keepitems:
