--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<bukkitVersion>1.3.1-R1.0</bukkitVersion>
+		<bukkitVersion>1.3.2-R0.2-SNAPSHOT</bukkitVersion>
 		<buildNumber>Unknown</buildNumber>
 	</properties>
 
@@ -42,7 +42,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.bukkit</groupId>
-			<artifactId>bukkit</artifactId>
+			<artifactId>craftbukkit</artifactId>
 			<version>${bukkitVersion}</version>
 			<scope>provided</scope>
 		</dependency>
