--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.bukkit</groupId>
-			<artifactId>bukkit</artifactId>
+			<artifactId>craftbukkit</artifactId>
 			<version>${bukkitVersion}</version>
 			<scope>provided</scope>
 		</dependency>
