--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<bukkitVersion>1.3.2-R0.2-SNAPSHOT</bukkitVersion>
+		<bukkitVersion>1.4.6-R0.2-SNAPSHOT</bukkitVersion>
 		<buildNumber>Unknown</buildNumber>
 	</properties>
 
@@ -33,6 +33,10 @@
 	<!-- Repository locations -->
 	<repositories>
 		<repository>
+			<id>vault-repo</id>
+			<url>http://ci.herocraftonline.com/plugin/repository/everything</url>
+		</repository>	
+		<repository>
 			<id>spout-repo</id>
 			<url>http://repo.spout.org</url>
 		</repository>
@@ -42,26 +46,20 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.bukkit</groupId>
-			<artifactId>craftbukkit</artifactId>
+			<artifactId>bukkit</artifactId>
 			<version>${bukkitVersion}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.getspout</groupId>
-			<artifactId>spoutpluginapi</artifactId>
+			<artifactId>spoutplugin</artifactId>
 			<version>dev-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>net.milkbowl</groupId>
-			<artifactId>vault</artifactId>
-			<version>1.2.12</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.spout</groupId>
-			<artifactId>spoutapi</artifactId>
-			<version>dev-SNAPSHOT</version>
+			<groupId>net.milkbowl.vault</groupId>
+			<artifactId>Vault</artifactId>
+			<version>1.2.23-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
